# arbiter

./: .graftignore  CHANGELOG.md  LICENSE  README.md  arbiterdecl.go  arbiterdecl_test.go  bench_latency_split_test.go  bench_test.go  eval.go  eval_language_features_test.go  eval_operators_test.go  eval_test.go  examples_pipeline_test.go  go.mod  go.sum  governed_eval_test.go  grammar.go  grammar.json  grammar_test.go  highlights.scm  httpmw.go  httpmw_test.go  include_test.go  language.go  schema_validation_test.go  sourceunit.go  strategy_eval.go  strategy_eval_test.go  transpile.go  transpile_ir.go  validate.go
arbtest/: arbtest_test.go  parse.go  run.go  types.go
audit/: sink.go
authz/: authz.go  authz_test.go
compiler/: compile_ir.go  compile_ir_test.go  compiler.go  compiler_test.go  jsonloader.go  jsonloader_test.go  opcode.go  opcode_test.go  ruleset.go
dataplane/: agent.go  agent_test.go  fileplane.go  grpcplane.go  grpcplane_test.go  overrideplane.go  overrideplane_test.go  status.go  status_test.go  types.go
decimal/: decimal.go
decompile/: arishem.go  arishem_test.go
deploy/: Dockerfile  k8s.yaml
emit/: cel.go  drools.go  emit_test.go  ir_helpers.go  rego.go
examples/: ci_governance.arb
expert/: compile.go  expert_test.go  quantity.go  schema.go  (+3 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: smoke.py
sdks/python/src/arbiter/v1/: service_pb2.py  service_pb2_grpc.py
sdks/python/src/arbiter_sdk/: __init__.py  client.py
sdks/rust/: Cargo.toml  README.md  build.rs
sdks/rust/examples/: smoke.rs
sdks/rust/src/: lib.rs
(+119 files in other folders)
