[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-sdk"
version = "0.5.1"
description = "Thin Python gRPC client for Arbiter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.75.0,<2",
  "protobuf>=6.31.1,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
